--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
   }
 }
 </head>
-<body class="single-scene view-control-buttons">
-
+<body class="single-scene view-control-buttons">  
+  
 <div id="pano"></div>
 
 <div id="sceneList">
@@ -97,6 +97,12 @@
   </ul>
 </div>
 
+  <div id="myModal" class="modal">
+  <span class="close">&times;</span>
+  <img class="modal-content" id="img01">
+  <div id="caption"></div>
+</div>  
+  
 <div id="titleBar">
   <h1 class="sceneName"></h1>
 </div>
@@ -140,7 +146,7 @@
 <script src="vendor/marzipano.js" ></script>
 
 <script src="data.js"></script>
-<script src="index.js"></script>
+<script src="index.js"></script> 
   
 </body>
 </html>
